// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusIndicator All 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 ogdeZ"
      type="neutral"
    >
      Neutral
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 bpXEKd"
      type="quiet"
    >
      Quiet
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 vdLbK"
      type="informative"
    >
      Informative
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 gBtuFC"
      type="success"
    >
      Success
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 jYbbBN"
      type="warning"
    >
      Warning
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 eptaEq"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 kEBduM"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Following text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 bPFBWy"
    >
      <span
        class="sc-AxgMl irYLZC"
        font-size="26px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 ewmDkL"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 bPFBWy"
    >
      <span
        class="sc-AxheI sc-Axmtr jGoQwU"
        font-size="20px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 ewmDkL"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 bPFBWy"
    >
      <span
        class="sc-AxhCb czaJmK"
        color="currentColor"
        font-size="16px"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 ewmDkL"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 bPFBWy"
    >
      <span
        class="sc-AxhCb gGqpvs"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 ewmDkL"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 bPFBWy"
    >
      <span
        class="sc-AxhCb eHrDLS"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 ewmDkL"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 dyxeGM"
      type="informative"
    >
      Informative
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Inside flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxgMl fyyuUF"
        font-size="26px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxheI sc-Axmtr iRBWoo"
        font-size="20px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb laTFNi"
        color="currentColor"
        font-size="16px"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb chBKUG"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb hlgKbb"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Neutral 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 ewmDkL"
      type="neutral"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Quiet 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 jiQOiD"
      type="quiet"
    >
      Quiet
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 isWGuw"
      type="success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 kuIqEL"
      type="warning"
    >
      Warning
    </p>
  </div>
</div>
`;
